Use proper subdirectory structure.

--- a/lib/_ffi/python/makefile
+++ b/lib/_ffi/python/makefile
@@ -1,12 +1,12 @@
 # Copyright (c) 1994-2021 by Marc Feeley, All Rights Reserved.
 # Copyright (c) 2021 by Marc-André Bélanger, All Rights Reserved.
 
-herefromlib = _ffi
-libfromhere = ..
-SUBDIRS = python
-HEADERS_SCM =
-MODULES_SCM =
-MAIN_MODULES =
+herefromlib = _ffi/python
+libfromhere = ../..
+SUBDIRS =
+HEADERS_SCM = python\#.scm
+MODULES_SCM = python.scm
+MAIN_MODULES = python
 OTHER_RCFILES = makefile
 
 include $(libfromhere)/module-common.mk
